WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
79318
[BlackBerry] Anchor mailto: with target set won't launch Messaging application when clicked
https://bugs.webkit.org/show_bug.cgi?id=79318
Summary
[BlackBerry] Anchor mailto: with target set won't launch Messaging applicatio...
Charles Wei
Reported
2012-02-22 19:08:30 PST
<a href="mailto:email@host"> click me to launch messaging </a> works , while <a href="mailto:email@host" target="_blank"> click me to launch messaging </a> doesn't work.
Attachments
Patch
(2.96 KB, patch)
2012-02-22 22:24 PST
,
Charles Wei
no flags
Details
Formatted Diff
Diff
Patch for landing
(2.93 KB, patch)
2012-02-23 18:23 PST
,
Leo Yang
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Charles Wei
Comment 1
2012-02-22 22:24:55 PST
Created
attachment 128397
[details]
Patch
Rob Buis
Comment 2
2012-02-23 04:36:07 PST
Comment on
attachment 128397
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=128397&action=review
Looks good.
> Source/WebKit/blackberry/WebCoreSupport/FrameLoaderClientBlackBerry.cpp:282 > + BlackBerry::Platform::NetworkRequest platformRequest;
Can probably remove the BlackBerry prefix.
> Source/WebKit/blackberry/WebCoreSupport/FrameLoaderClientBlackBerry.cpp:285 > + platformRequest, BlackBerry::Platform::NavigationType(action.type()))) {
Ditto.
> Source/WebKit/blackberry/WebCoreSupport/FrameLoaderClientBlackBerry.cpp:287 > + || action.type() == NavigationTypeFormResubmitted)
Can be just one line.
Charles Wei
Comment 3
2012-02-23 05:51:04 PST
Comment on
attachment 128397
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=128397&action=review
>> Source/WebKit/blackberry/WebCoreSupport/FrameLoaderClientBlackBerry.cpp:282 >> + BlackBerry::Platform::NetworkRequest platformRequest; > > Can probably remove the BlackBerry prefix.
No, we can't remove the BlackBerry prefix. We are using BlackBerry:WebKit, but not BlackBerry. Maybe we should use BlackBerry and add the WebKit prefix back in the code. We should do that with another patch.
>> Source/WebKit/blackberry/WebCoreSupport/FrameLoaderClientBlackBerry.cpp:287 >> + || action.type() == NavigationTypeFormResubmitted) > > Can be just one line.
Yes, will fix this and submit.
Charles Wei
Comment 4
2012-02-23 05:51:52 PST
Comment on
attachment 128397
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=128397&action=review
>>> Source/WebKit/blackberry/WebCoreSupport/FrameLoaderClientBlackBerry.cpp:282 >>> + BlackBerry::Platform::NetworkRequest platformRequest; >> >> Can probably remove the BlackBerry prefix. > > No, we can't remove the BlackBerry prefix. We are using BlackBerry:WebKit, but not BlackBerry. Maybe we should use BlackBerry and add the WebKit prefix back in the code. We should do that with another patch.
No, we can't remove the BlackBerry prefix. We are using BlackBerry:WebKit, but not BlackBerry. Maybe we should use BlackBerry and add the WebKit prefix back in the code. We should do that with another patch.
>>> Source/WebKit/blackberry/WebCoreSupport/FrameLoaderClientBlackBerry.cpp:287 >>> + || action.type() == NavigationTypeFormResubmitted) >> >> Can be just one line. > > Yes, will fix this and submit.
Yes, will fix this and submit.
WebKit Review Bot
Comment 5
2012-02-23 05:53:12 PST
Comment on
attachment 128397
[details]
Patch Rejecting
attachment 128397
[details]
from commit-queue.
charles.wei@torchmobile.com.cn
does not have committer permissions according to
http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py
. - If you do not have committer rights please read
http://webkit.org/coding/contributing.html
for instructions on how to use bugzilla flags. - If you have committer rights please correct the error in Tools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your committer rights.
Charles Wei
Comment 6
2012-02-23 05:54:16 PST
Comment on
attachment 128397
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=128397&action=review
remove the commit flag, added it by accident.
>>>> Source/WebKit/blackberry/WebCoreSupport/FrameLoaderClientBlackBerry.cpp:282 >>>> + BlackBerry::Platform::NetworkRequest platformRequest; >>> >>> Can probably remove the BlackBerry prefix. >> >> No, we can't remove the BlackBerry prefix. We are using BlackBerry:WebKit, but not BlackBerry. Maybe we should use BlackBerry and add the WebKit prefix back in the code. We should do that with another patch. > > No, we can't remove the BlackBerry prefix. We are using BlackBerry:WebKit, but not BlackBerry. Maybe we should use BlackBerry and add the WebKit prefix back in the code. We should do that with another patch.
No, we can't remove the BlackBerry prefix. We are using BlackBerry:WebKit, but not BlackBerry. Maybe we should use BlackBerry and add the WebKit prefix back in the code. We should do that with another patch.
>>>> Source/WebKit/blackberry/WebCoreSupport/FrameLoaderClientBlackBerry.cpp:287 >>>> + || action.type() == NavigationTypeFormResubmitted) >>> >>> Can be just one line. >> >> Yes, will fix this and submit. > > Yes, will fix this and submit.
Yes, will fix this and submit.
Leo Yang
Comment 7
2012-02-23 18:23:07 PST
Created
attachment 128628
[details]
Patch for landing
WebKit Review Bot
Comment 8
2012-02-24 02:54:15 PST
Comment on
attachment 128628
[details]
Patch for landing Clearing flags on attachment: 128628 Committed
r108763
: <
http://trac.webkit.org/changeset/108763
>
WebKit Review Bot
Comment 9
2012-02-24 02:54:20 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug