[BlackBerry] Anchor mailto: with target set won't launch Messaging application when clicked https://bugs.webkit.org/show_bug.cgi?id=79318

Need to give the client a chance to decide how to handle the new window request.

Patch by Charles Wei <charles.wei@torchmobile.com.cn> on 2012-02-24
Reviewed by Rob Buis.

* WebCoreSupport/FrameLoaderClientBlackBerry.cpp:
(WebCore::FrameLoaderClientBlackBerry::dispatchDecidePolicyForNewWindowAction):

Canonical link: https://commits.webkit.org/96539@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108763 268f45cc-cd09-0410-ab3c-d52691b4dbfc